metadata/unpackaged/objects/QuoteOrder__c.object
<CustomObject>
    <description>Automatically generated by EscapeNotes. Remove this text to write protect from EscapeNotes.</description>
    <fields>
        <fullName>A_BU_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_BU_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_BU_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_BU_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Ind_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Ind_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Ind_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Ind_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Sp_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Sp_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Sp_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Sp_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Str_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Str_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Str_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Str_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Tst_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Tst_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>A_Tst_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>A_Tst_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AckDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(AckDate = &quot;&quot; &amp; AckYN = &quot;No&quot;; &quot;&quot;; AckYN_Old != AckYN; @Now; AckDate)</description>
        <label>AckDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AckExhangeRateGB__c</fullName>
        <description>&lt;Value Formula&gt;
@If(AckYN = &quot;Yes&quot;; AckExhangeRateGB£; ExchRateGB£)</description>
        <label>AckExhangeRateGB£</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AckExhangeRateUS__c</fullName>
        <description>&lt;Value Formula&gt;
@If(AckYN = &quot;Yes&quot;; AckExhangeRateUS$; ExchRateUS$)</description>
        <label>AckExhangeRateUS$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AckExhangeRate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(AckYN = &quot;Yes&quot;; AckExhangeRate; ExchRate)</description>
        <label>AckExhangeRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AckRevisedDate__c</fullName>
        <label>AckRevisedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AckYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
AckYN</description>
        <label>AckYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AckYN__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;No&quot;

&lt;Input Validation Formula&gt;
@If(AckYN = &quot;Yes&quot;; AckYN = &quot;Ja&quot;; AckYN = &quot;Nee&quot;)

&lt;Field Script&gt;
&apos;++LotusScript Development Environment:2:5:(Options):0:66

&apos;++LotusScript Development Environment:2:5:(Forward):0:1
Declare Sub Entering(Source As Field)
Declare Sub Exiting(Source As Field)

&apos;++LotusScript Development Environment:2:5:(Declarations):0:2

&apos;++LotusScript Development Environment:2:2:BindEvents:1:129
Private Sub BindEvents(Byval Objectname_ As String)
	Static Source As FIELD
	Set Source = Bind(Objectname_)
	On Event Entering From Source Call Entering
	On Event Exiting From Source Call Exiting
End Sub

&apos;++LotusScript Development Environment:2:2:Entering:1:12
Sub Entering(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refresh
End Sub
&apos;++LotusScript Development Environment:2:2:Exiting:1:12
Sub Exiting(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc</description>
        <label>AckYN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcknldCostPrice__c</fullName>
        <description>&lt;Value Formula&gt;
@If(@IsError(A_BU_C + A_Str_C + A_Ind_C + A_Tst_C + A_Sp_C); 0; A_BU_C + A_Str_C + A_Ind_C + A_Tst_C + A_Sp_C)</description>
        <label>AcknldCostPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendNo__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>AmendNo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttachementsXNRTF__c</fullName>
        <label>Attachements</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachements__c</fullName>
        <label>Attachements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCR__c</fullName>
        <label>CCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(CancelDate = &quot;&quot; &amp; OrderCancelledYN = &quot;No&quot;; &quot;&quot;; OrderCancelledYN_Old != OrderCancelledYN; @Now; CancelDate)</description>
        <label>CancelDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CartAndForwarding__c</fullName>
        <label>CartAndForwarding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientOrderNo__c</fullName>
        <label>ClientOrderNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentsXNRTF__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>&lt;Input Validation Formula&gt;
@If(Currency = &quot;&quot;; @Failure(&quot;Currency must be entered&quot;); @Success)

&lt;Field Script&gt;
&apos;++LotusScript Development Environment:2:5:(Options):0:66

&apos;++LotusScript Development Environment:2:5:(Forward):0:1
Declare Sub Exiting(Source As Field)

&apos;++LotusScript Development Environment:2:5:(Declarations):0:2

&apos;++LotusScript Development Environment:2:2:BindEvents:1:129
Private Sub BindEvents(Byval Objectname_ As String)
	Static Source As FIELD
	Set Source = Bind(Objectname_)
	On Event Exiting From Source Call Exiting
End Sub

&apos;++LotusScript Development Environment:2:2:Exiting:1:12
Sub Exiting(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refresh
End Sub</description>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>&lt;Input Translation Formula&gt;
@Trim(Customer)

&lt;Input Validation Formula&gt;
@If(Customer = &quot;&quot;; @Failure(&quot;Customer must be entered&quot;); @Success)

&lt;Keyword Formula&gt;
@Unique(@DbColumn(&quot;&quot;;&quot;&quot;;&quot;LookupCustomer&quot;;1))</description>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeaYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
PreYN</description>
        <label>DeaYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionShort__c</fullName>
        <label>DescriptionShort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescriptionXNRTF__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocumentId__c</fullName>
        <label>Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstGrossWeight__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;0&quot;</description>
        <label>EstGrossWeight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstNettWeight__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;0&quot;</description>
        <label>EstNettWeight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstNoPacks__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;0&quot;</description>
        <label>EstNoPacks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstPackDims__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;0 x 0 x 0&quot;</description>
        <label>EstPackDims</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExchRateGB__c</fullName>
        <description>&lt;Value Formula&gt;
@If(ShippedDate != &quot;&quot;; ExchRateGB£; @Subset(@DbColumn(&quot;&quot; : &quot;NoCache&quot;; &quot;&quot;; &quot;LookupExchRate&quot;; 3); 1))</description>
        <label>ExchRateGB£</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExchRateUS__c</fullName>
        <description>&lt;Value Formula&gt;
@If(ShippedDate != &quot;&quot;; ExchRateUS$; @Subset(@DbColumn(&quot;&quot; : &quot;NoCache&quot;; &quot;&quot;; &quot;LookupExchRate&quot;; 2); 1))</description>
        <label>ExchRateUS$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExchRate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(Currency = &quot;US$&quot;; 1;
	@If(Currency = &quot;€&quot;; ExchRateUS$;
		@If(Currency = &quot;GB£&quot;; ExchRateUS$ / ExchRateGB£;
			0)))</description>
        <label>ExchRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FolCommentXNRTF__c</fullName>
        <label>FolComment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FolComment__c</fullName>
        <label>FolComment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FolYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
FreYN</description>
        <label>FolYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forwarder__c</fullName>
        <label>Forwarder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>&lt;Keyword Formula&gt;
@Unique(@DbColumn(&quot;&quot;;&quot;&quot;;&quot;LookupFrom&quot;;1))</description>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOQuoteNo__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>IOQuoteNo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastEditor__c</fullName>
        <description>&lt;Value Formula&gt;
@Author</description>
        <label>LastEditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <label>Last modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ManufactureIn__c</fullName>
        <label>ManufactureIn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naam__c</fullName>
        <description>&lt;Default Value Formula&gt;
@Author</description>
        <label>Naam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotesFiles__c</fullName>
        <label>Notes Files</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderCancelledYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
OrderCancelledYN</description>
        <label>OrderCancelledYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderCancelledYN__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;No&quot;</description>
        <label>OrderCancelledYN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>&lt;Input Translation Formula&gt;
@If(OrderDate!=&quot;&quot;; OrderDate;
  (SN!=&quot;&quot; | SNN!=&quot;&quot; | SNA !=&quot;&quot; | SNJ !=&quot;&quot;); @Now;
  &quot;&quot;
)</description>
        <label>OrderDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrderDel__c</fullName>
        <description>&lt;Input Translation Formula&gt;
 @Trim(OrderDel)</description>
        <label>OrderDel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P1Val__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>P1Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1WK__c</fullName>
        <description>&lt;Default Value Formula&gt;
0

&lt;Input Validation Formula&gt;
@If(@Elements(OrderDel ) &gt; 1; @If(P1WK = 0; @Failure(&quot;Order delivery during more then 1 week please assign Partials&quot;); @Success); @Success)</description>
        <label>P1WK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2Val__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>P2Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2WK__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>P2WK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3Val__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>P3Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3WK__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>P3WK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoteDel != &quot;&quot; &amp; QuoteDelOld = &quot;&quot;; @Now; PlanDate)</description>
        <label>PlanDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlanningCommentsXNRTF__c</fullName>
        <label>PlanningComments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PlanningComments__c</fullName>
        <label>PlanningComments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PlanningRole__c</fullName>
        <label>PlanningRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanningValidity__c</fullName>
        <label>PlanningValidity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Section__c</fullName>
        <description>&lt;Value Formula&gt;
&quot;[Planning]&quot;</description>
        <label>Planning_Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceAcknld__c</fullName>
        <description>&lt;Value Formula&gt;
@If(@IsError(A_BU_S + A_Str_S + A_Ind_S + A_Tst_S + A_Sp_S); 0; A_BU_S + A_Str_S + A_Ind_S + A_Tst_S + A_Sp_S)</description>
        <label>PriceAcknld</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceQuoted__c</fullName>
        <description>&lt;Value Formula&gt;
@If(@IsError(Q_BU_S + Q_Str_S + Q_Ind_S + Q_Tst_S + Q_Sp_S); 0; Q_BU_S + Q_Str_S + Q_Ind_S + Q_Tst_S + Q_Sp_S)</description>
        <label>PriceQuoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>&lt;Input Validation Formula&gt;
@If(Probability  = &quot;0&quot; | Probability  = &quot;30&quot; | Probability  = &quot;60&quot; | Probability  = &quot;90&quot; | Probability = &quot;100&quot;; @Success; @Failure(&quot;The probability must be entered&quot;))</description>
        <label>Probability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_BU_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_BU_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_BU_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_BU_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Ind_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Ind_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Ind_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Ind_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Sp_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Sp_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Str_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Str_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Str_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Str_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Tst_C__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Tst_C</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Tst_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_Tst_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_sp_S__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>Q_sp_S</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoDate = &quot;&quot; &amp; QuoYN = &quot;No&quot;; &quot;&quot;; QuoYN_Old != QuoYN; @Now; QuoDate)</description>
        <label>QuoDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoExchangeRateGB__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoYN = &quot;Yes&quot;; QuoExchangeRateGB£; ExchRateGB£)</description>
        <label>QuoExchangeRateGB£</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoExchangeRateUS__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoYN = &quot;Yes&quot;; QuoExchangeRateUS$; ExchRateUS$)</description>
        <label>QuoExchangeRateUS$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoExchangeRate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoYN = &quot;Yes&quot;; QuoExchangeRate; ExchRate)</description>
        <label>QuoExchangeRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoRevisedDate__c</fullName>
        <label>QuoRevisedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
QuoYN</description>
        <label>QuoYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoYN__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;No&quot;

&lt;Field Script&gt;
&apos;++LotusScript Development Environment:2:5:(Options):0:66

&apos;++LotusScript Development Environment:2:5:(Forward):0:1
Declare Sub Entering(Source As Field)
Declare Sub Exiting(Source As Field)

&apos;++LotusScript Development Environment:2:5:(Declarations):0:2

&apos;++LotusScript Development Environment:2:2:BindEvents:1:129
Private Sub BindEvents(Byval Objectname_ As String)
	Static Source As FIELD
	Set Source = Bind(Objectname_)
	On Event Entering From Source Call Entering
	On Event Exiting From Source Call Exiting
End Sub

&apos;++LotusScript Development Environment:2:2:Entering:1:12
Sub Entering(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refresh
End Sub
&apos;++LotusScript Development Environment:2:2:Exiting:1:12
Sub Exiting(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refres</description>
        <label>QuoYN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDate__c</fullName>
        <description>&lt;Input Translation Formula&gt;
@If(QuoteDate!=&quot;&quot;; QuoteDate;
  (SP!=&quot;&quot; | SPN!=&quot;&quot; | SPA !=&quot;&quot; | SPJ !=&quot;&quot;); @Now;
  &quot;&quot;
)</description>
        <label>QuoteDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteDelOld__c</fullName>
        <description>&lt;Value Formula&gt;
@If(QuoteDelOld = &quot;&quot;; QuoteDel; QuoteDelOLD)</description>
        <label>QuoteDelOld</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteDel__c</fullName>
        <label>QuoteDel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteProbability__c</fullName>
        <description>&lt;Default Value Formula&gt;
0</description>
        <label>QuoteProbability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotedCostPrice__c</fullName>
        <description>&lt;Value Formula&gt;
@If(@IsError(Q_BU_C + Q_Str_C + Q_Ind_C + Q_Tst_C + Q_Sp_C); 0; Q_BU_C + Q_Str_C + Q_Ind_C + Q_Tst_C + Q_Sp_C)</description>
        <label>QuotedCostPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REF__c</fullName>
        <label>REF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP__c</fullName>
        <label>REP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplicaId__c</fullName>
        <label>Replica Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReqShipDestination__c</fullName>
        <label>ReqShipDestination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
RevYN</description>
        <label>RevYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rev_Descr__c</fullName>
        <label>Rev.Descr.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNA__c</fullName>
        <label>SNA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNJ__c</fullName>
        <label>SNJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SNN__c</fullName>
        <label>SNN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <label>SN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPA__c</fullName>
        <label>SPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPJ__c</fullName>
        <label>SPJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPN__c</fullName>
        <label>SPN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SP__c</fullName>
        <description>&lt;Input Validation Formula&gt;
@If(SP = &quot;&quot; &amp; SPA = &quot;&quot; &amp; SPN = &quot;&quot; &amp; SPJ = &quot;&quot; &amp; SN = &quot;&quot; &amp; SNA = &quot;&quot; &amp; SNN = &quot;&quot; &amp;SNJ = &quot;&quot;; @Failure(&quot;A Quote or Order number must be entered&quot;); @Success)</description>
        <label>SP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesRole__c</fullName>
        <description>&lt;Field Script&gt;
&apos;++LotusScript Development Environment:2:5:(Options):0:66

&apos;++LotusScript Development Environment:2:5:(Forward):0:1
Declare Sub Initialize

&apos;++LotusScript Development Environment:2:5:(Declarations):0:2

&apos;++LotusScript Development Environment:2:2:BindEvents:1:129
Private Sub BindEvents(Byval Objectname_ As String)
     Static Source As FIELD
     Set Source = Bind(Objectname_)
End Sub

&apos;++LotusScript Development Environment:2:2:Initialize:1:10
Sub Initialize
     
End Sub</description>
        <label>SalesRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Date__c</fullName>
        <description>&lt;Value Formula&gt;
@Created</description>
        <label>Sales_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Section_1__c</fullName>
        <description>&lt;Value Formula&gt;
&quot;[Sales]&quot;</description>
        <label>Sales_Section_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <description>&lt;Input Validation Formula&gt;
@If(SalesPerson=&quot;&quot;;@Failure(&quot;You must enter a Region for this Quote/Order.&quot;);@Success)</description>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeismicEnquiry__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;Yes&quot;</description>
        <label>SeismicEnquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipQuoteYNDate__c</fullName>
        <description>&lt;Value Formula&gt;
@If(ShipQuoteYN = &quot;No&quot;; &quot;&quot;; @If(ShipQuoteYN_Old = &quot;No&quot;; @Now; ShipQuoteYNDate))</description>
        <label>ShipQuoteYNDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShipQuoteYN_Old__c</fullName>
        <description>&lt;Value Formula&gt;
ShipQuoteYN</description>
        <label>ShipQuoteYN_Old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipQuoteYN__c</fullName>
        <description>&lt;Default Value Formula&gt;
&quot;No&quot;</description>
        <label>ShipQuoteYN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedDate__c</fullName>
        <description>&lt;Field Script&gt;
&apos;++LotusScript Development Environment:2:5:(Options):0:66

&apos;++LotusScript Development Environment:2:5:(Forward):0:1
Declare Sub Entering(Source As Field)
Declare Sub Exiting(Source As Field)

&apos;++LotusScript Development Environment:2:5:(Declarations):0:2

&apos;++LotusScript Development Environment:2:2:BindEvents:1:129
Private Sub BindEvents(Byval Objectname_ As String)
	Static Source As FIELD
	Set Source = Bind(Objectname_)
	On Event Entering From Source Call Entering
	On Event Exiting From Source Call Exiting
End Sub

&apos;++LotusScript Development Environment:2:2:Entering:1:12
Sub Entering(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refresh
End Sub
&apos;++LotusScript Development Environment:2:2:Exiting:1:12
Sub Exiting(Source As Field)
	Dim workspace As New NotesUIWorkspace
	Dim uidoc As NotesUIDocument
	Set uidoc = workspace.CurrentDocument
	Call uidoc.Refresh
End Sub</description>
        <label>ShippedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShippingCommentsXNRTF__c</fullName>
        <label>ShippingComments</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShippingComments__c</fullName>
        <label>ShippingComments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShippingRole__c</fullName>
        <label>ShippingRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Section__c</fullName>
        <description>&lt;Value Formula&gt;
&quot;[Shipping]&quot;</description>
        <label>Shipping_Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>Tel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransOrdNr__c</fullName>
        <label>TransOrdNr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>